--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,6 @@
 @import "../components/Header/style.css";
 @import "../components/AppContainer/style.css";
+@import "../components/GameContainer/style.css";
 
 
 *, *::before, *::after {
