feat: game 키보드 및 보드판 layout 구현

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 @import "../components/Header/style.css";
 @import "../components/AppContainer/style.css";
-@import "../components/GameContainer/style.css";
+@import "../components/Game/style.css";
 
 
 *, *::before, *::after {
