feat: game board 크기 조절 이벤트 구현

--- a/src/components/Game/style.css
+++ b/src/components/Game/style.css
@@ -19,9 +19,9 @@
   flex-flow: column nowrap;
   gap: 5px;
   padding: 10px;
-  width: 100%;
-  max-width: 304px;
-  height: 90%;
+  /*width: 100%;*/
+  /*max-width: 304px;*/
+  /*height: 90%;*/
 }
 
 .boardRow {
