feat: wordle 게임 로직 구현

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,12 @@
 @import "../components/Header/style.css";
 @import "../components/AppContainer/style.css";
 @import "../components/Game/style.css";
+@import "../components/TastPopup/style.css";
+@import "../components/GameResultPopup/style.css";
 
-
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   color: #fff;
 }
 
