--- a/src/components/Game/style.css
+++ b/src/components/Game/style.css
@@ -19,9 +19,6 @@
   flex-flow: column nowrap;
   gap: 5px;
   padding: 10px;
-  /*width: 100%;*/
-  /*max-width: 304px;*/
-  /*height: 90%;*/
 }
 
 .boardRow {
@@ -32,8 +29,26 @@
 
 .boardTile {
   flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100%;
+  font-size: 18px;
+  font-weight: 700;
   border: 1px solid #565758;
+  border-radius: 4px;
+}
+
+.boardTile.green {
+  background-color: #6aaa64;
+}
+
+.boardTile.yellow {
+  background-color: #c9b458;
+}
+
+.boardTile.gray {
+  background-color: #787c7e;
 }
 
 .keyboard {
