--- a/src/components/Game/style.css
+++ b/src/components/Game/style.css
@@ -39,15 +39,18 @@
   border-radius: 4px;
 }
 
-.boardTile.green {
+.boardTile.green,
+.alphabetKey.green {
   background-color: #6aaa64;
 }
 
-.boardTile.yellow {
+.boardTile.yellow,
+.alphabetKey.yellow {
   background-color: #c9b458;
 }
 
-.boardTile.gray {
+.boardTile.gray,
+.alphabetKey.gray {
   background-color: #787c7e;
 }
 
@@ -69,7 +72,7 @@
   margin-right: 6px;
   height: 100%;
   border-radius: 4px;
-  background-color: #818384;
+  background-color: #3a3a3c;
   font-size: 16px;
   font-weight: 700;
 }
